--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "parcel": "^2.16.0"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.16",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router": "^7.9.4"
+    "react-router": "^7.9.4",
+    "tailwindcss": "^4.1.16"
   }
 }
