--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "parcel": "^2.16.0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.10.1",
     "@tailwindcss/postcss": "^4.1.16",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.9.4",
     "tailwindcss": "^4.1.16"
   }
